--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "casper-storage",
-  "version": "1.0.0",
+  "version": "0.0.4",
   "description": "Provides standard implementation of wallet workflow, following standards BIPs, SLIPs",
   "author": "Caperdash.io <hello@casperdash.io>",
   "repository": "https://github.com/CasperDash/casper-storage",
@@ -10,8 +10,11 @@
     "storage",
     "casper-storage"
   ],
-  "main": "./dist/tsc/index.js",
-  "types": "./dist/tsc/index.d.ts",
+  "bugs": {
+    "url": "https://github.com/CasperDash/casper-storage/issues"
+  },
+  "main": "./dist/esbuild/cli.js",
+  "types": "./dist/esbuild/cli.d.ts",
   "browser": "./dist/esbuild/browser.js",
   "scripts": {
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
@@ -22,6 +25,7 @@
     "build-all": "yarn clean && yarn build && yarn esbuild-node && yarn esbuild-browser",
     "esbuild-browser": "esbuild src/browser.ts --bundle --minify --sourcemap=external --outfile=dist/esbuild/browser.js",
     "esbuild-node": "esbuild src/cli.ts --bundle --platform=node --minify --sourcemap=external --outfile=dist/esbuild/cli.js",
+    "esbuild": "esbuild src/cli.ts --bundle --outfile=dist/esbuild/cli.js",
     "ts-node": "ts-node"
   },
   "dependencies": {
