--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "Provides standard implementation of wallet workflow, following standards BIPs, SLIPs",
   "author": "Hoang DANG <hoangdh91@gmail.com>",
-  "repository": "https://github.com/CasperDash/casper-storage",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/CasperDash/casper-storage.git"
+  },
   "license": "MIT",
   "keywords": [
     "casper",
@@ -20,7 +23,7 @@
     "docs": "typedoc --entryPoints src/index.ts",
     "build": "tsc -p tsconfig.build.json",
     "build-all": "yarn clean && yarn build && yarn esbuild-node && yarn esbuild-browser",
-    "esbuild-browser": "esbuild src/browser.ts --bundle --minify --sourcemap=external --outfile=dist/esbuild/browser.js",
+    "esbuild-browser": "esbuild src/browser.ts --bundle --minify --sourcemap=external --format=esm --outfile=dist/esbuild/browser.js",
     "esbuild-node": "esbuild src/cli.ts --bundle --platform=node --minify --sourcemap=external --outfile=dist/esbuild/cli.js",
     "ts-node": "ts-node"
   },
@@ -28,7 +31,6 @@
     "@noble/ed25519": "^1.4.0",
     "@noble/hashes": "^0.5.9",
     "@noble/secp256k1": "^1.4.0",
-    "crypto-js": "^4.1.1",
     "micro-base": "^0.10.2",
     "secp256k1": "^4.0.2"
   },
@@ -49,5 +51,13 @@
     "ts-node": "^10.4.0",
     "typedoc": "^0.22.10",
     "typescript": "^4.5.4"
+  },
+  "bugs": {
+    "url": "https://github.com/CasperDash/casper-storage/issues"
+  },
+  "homepage": "https://github.com/CasperDash/casper-storage#readme",
+  "directories": {
+    "doc": "docs",
+    "test": "test"
   }
 }
