--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
     "test": "jest",
+    "test-ci": "jest --coverage",
     "clean": "rimraf dist build package",
     "docs": "typedoc --entryPoints src/index.ts",
     "build": "tsc -p tsconfig.build.json",
