--- a/package.json
+++ b/package.json
@@ -33,13 +33,11 @@
     "@noble/ed25519": "^1.4.0",
     "@noble/hashes": "^0.5.9",
     "@noble/secp256k1": "^1.4.0",
-    "micro-base": "^0.10.2",
-    "secp256k1": "^4.0.2"
+    "micro-base": "^0.10.2"
   },
   "devDependencies": {
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
-    "@types/secp256k1": "^4.0.3",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
     "esbuild": "^0.14.10",
