--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "casper-storage",
-  "version": "0.1.4",
+  "version": "0.1.6",
   "description": "Provides standard implementation of wallet workflow, following standards BIPs, SLIPs",
   "author": "Caperdash.io <hello@casperdash.io>",
   "repository": {
@@ -17,6 +17,7 @@
     "url": "https://github.com/CasperDash/casper-storage/issues"
   },
   "main": "./dist/esbuild/cli.js",
+  "browser": "./dist/esbuild/browser.js",
   "types": "./dist/esbuild/cli.d.ts",
   "scripts": {
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
@@ -54,9 +55,6 @@
     "ts-node": "^10.4.0",
     "typedoc": "^0.22.10",
     "typescript": "^4.5.4"
-  },
-  "bugs": {
-    "url": "https://github.com/CasperDash/casper-storage/issues"
   },
   "homepage": "https://github.com/CasperDash/casper-storage#readme",
   "directories": {
