--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "browser": "./dist/esbuild/browser.js",
   "scripts": {
     "prepublishOnly": "yarn build-all",
-    "prepush": "yarn lint && yarn test",
+    "prepush": "yarn ensure",
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
     "test": "jest",
     "testci": "jest --coverage",
@@ -29,15 +29,18 @@
     "esbuild-browser": "esbuild src/browser.ts --bundle --minify --sourcemap=external --format=esm --outfile=dist/esbuild/browser.js",
     "esbuild-node": "esbuild src/cli.ts --bundle --platform=node --minify --sourcemap=external --outfile=dist/esbuild/cli.js",
     "ts-node": "ts-node",
-    "ensure": "yarn lint && yarn test"
+    "ensure": "yarn lint && yarn test",
+    "helpme": ""
   },
   "dependencies": {
     "@noble/ed25519": "^1.4.0",
     "@noble/hashes": "^0.5.9",
     "@noble/secp256k1": "^1.4.0",
+    "aes-js": "^3.1.2",
     "micro-base": "^0.10.2"
   },
   "devDependencies": {
+    "@types/aes-js": "^3.1.1",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
