--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "clean": "rimraf dist build package",
     "docs": "typedoc --entryPoints src/index.ts",
     "build": "tsc -p tsconfig.build.json",
-    "build-all": "yarn clean && yarn build && yarn esbuild-node && yarn esbuild-browWser",
+    "build-all": "yarn clean && yarn build && yarn esbuild-node && yarn esbuild-browser",
     "esbuild-browser": "esbuild src/browser.ts --bundle --minify --sourcemap=external --format=esm --outfile=dist/esbuild/browser.js",
     "esbuild-node": "esbuild src/cli.ts --bundle --platform=node --minify --sourcemap=external --outfile=dist/esbuild/cli.js",
     "ts-node": "ts-node",
