--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "casper-storage",
-  "version": "0.1.6",
+  "version": "0.1.8",
   "description": "Provides standard implementation of wallet workflow, following standards BIPs, SLIPs",
   "author": "Caperdash.io <hello@casperdash.io>",
   "repository": {
@@ -31,7 +31,8 @@
     "esbuild-node": "esbuild src/cli.ts --bundle --platform=node --minify --sourcemap=external --outfile=dist/esbuild/cli.js",
     "esbuild": "esbuild src/cli.ts --bundle --outfile=dist/esbuild/cli.js",
     "ts-node": "ts-node",
-    "ensure": "yarn lint && yarn test"
+    "ensure": "yarn lint && yarn test",
+    "deploy": "yarn build-all && npm publish"
   },
   "dependencies": {
     "@noble/ed25519": "^1.4.0",
