--- a/.github/workflows/ci-master.yml
+++ b/.github/workflows/ci-master.yml
@@ -34,6 +34,12 @@ jobs:
         node-version: [16.x]
 
     steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'yarn'
     - uses: JS-DevTools/npm-publish@v1
       with:
           token: ${{ secrets.NPM_TOKEN }}
