--- a/.github/workflows/ci-master.yml
+++ b/.github/workflows/ci-master.yml
@@ -5,7 +5,7 @@ on:
     branches: [ master, feature/configure-ci ]
 
 jobs:
-  build:
+  build_deploy:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -24,32 +24,16 @@ jobs:
       uses: codecov/codecov-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-    
-  
-  deploy:
-    needs: [build]
-    runs-on: ubuntu-latest 
-    strategy:
-      matrix:
-        node-version: [16.x]
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'yarn'
     - uses: JS-DevTools/npm-publish@v1
       with:
           token: ${{ secrets.NPM_TOKEN }}
     - if: steps.publish.outputs.type != 'none'
       run: |  
         echo "Version changed: ${{ steps.publish.outputs.old-version }} => ${{ steps.publish.outputs.version }}"
-
-
+    
+  
   notification:
-      needs: [deploy]
+      needs: [build_deploy]
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v2
