--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "casper-storage",
-  "version": "1.0.0",
+  "version": "0.1.13",
   "description": "Provides standard implementation of wallet workflow, following standards BIPs, SLIPs",
-  "author": "Hoang DANG <hoangdh91@gmail.com>",
+  "author": "Caperdash.io <hello@casperdash.io>",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/CasperDash/casper-storage.git"
@@ -13,6 +13,9 @@
     "storage",
     "casper-storage"
   ],
+  "bugs": {
+    "url": "https://github.com/CasperDash/casper-storage/issues"
+  },
   "browser": "./dist/esbuild/browser.js",
   "main": "./dist/tsc/cli.js",
   "types": "./dist/tsc/cli.d.ts",
@@ -28,8 +31,10 @@
     "build-all": "yarn clean && yarn build && yarn esbuild-node && yarn esbuild-browser",
     "esbuild-browser": "esbuild src/browser.ts --bundle --minify --sourcemap=external --format=esm --outfile=dist/esbuild/browser.js",
     "esbuild-node": "esbuild src/cli.ts --bundle --platform=node --minify --sourcemap=external --outfile=dist/esbuild/cli.js",
+    "esbuild": "esbuild src/cli.ts --bundle --outfile=dist/esbuild/cli.js",
     "ts-node": "ts-node",
     "ensure": "yarn lint && yarn test",
+    "deploy": "yarn build-all && npm publish",
     "helpme": "echo 'prepush, test, build-all'"
   },
   "dependencies": {
@@ -55,9 +60,6 @@
     "ts-node": "^10.4.0",
     "typedoc": "^0.22.12",
     "typescript": "^4.5.4"
-  },
-  "bugs": {
-    "url": "https://github.com/CasperDash/casper-storage/issues"
   },
   "homepage": "https://github.com/CasperDash/casper-storage#readme",
   "directories": {
