--- a/.github/workflows/ci-check.yml
+++ b/.github/workflows/ci-check.yml
@@ -21,7 +21,9 @@ jobs:
 
     - run: yarn install
 
-    - name: link, build and test
+    - name: Lint
       run: yarn lint
+    - name: Build
       run: yarn build-all
+    - name: Test
       run: yarn test
