--- a/.github/workflows/ci-master.yml
+++ b/.github/workflows/ci-master.yml
@@ -23,8 +23,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
-    - run: yarn install
-    - run: yarn testci
+    - name: Install
+      run: yarn install
+    - name: Test with coverage
+      run: yarn testci
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
