--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -3,8 +3,7 @@ name: ci-release
 on:
   workflow_run:
     workflows: ["ci-check"]
-    push:
-      branches: [release]
+    branches: [release]
     types:
       - completed
 
@@ -23,6 +22,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'yarn'
     - run: yarn install
+    - run: yarn clean
 
     - name: Publish npm package
       uses: JS-DevTools/npm-publish@v1
@@ -32,10 +32,9 @@ jobs:
       run: |  
         echo "Version changed: ${{ steps.publish.outputs.old-version }} => ${{ steps.publish.outputs.version }}"
 
-    - name: Generate document
-      run: yarn docs
+    - run: yarn docs
     - name: Deploy document
-      uses: JamesIves/github-pages-deploy-action@4.2.1
+      uses: JamesIves/github-pages-deploy-action@v4.2.5
       with:
         branch: gh-pages
         folder: docs
