--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/node": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
+    "buffer": "^6.0.3",
     "esbuild": "^0.14.10",
     "eslint": "^8.6.0",
     "jest": "^27.4.7",
