Feature/support pem formats (#14)
Key-parser converts PEM to private-key, refactor encoder utils

--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "@noble/hashes": "^0.5.9",
     "@noble/secp256k1": "^1.4.0",
     "@react-native-async-storage/async-storage": "^1.16.1",
+    "@scure/base": "^1.0.0",
     "aes-js": "^3.1.2",
+    "key-encoder": "^2.0.3",
     "micro-base": "^0.10.2"
   },
   "devDependencies": {
@@ -50,6 +52,7 @@
     "@types/node": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
+    "buffer": "^6.0.3",
     "esbuild": "^0.14.10",
     "eslint": "^8.6.0",
     "jest": "^27.4.7",
