--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -15,6 +15,8 @@ jobs:
         node-version: [16.x]
 
     steps:
+    - env:
+      INPUT_TOKEN: ""
     - uses: actions/checkout@v2.4.0
     - name: Node ${{ matrix.node-version }}
       uses: actions/setup-node@v2
