--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "type": "git",
     "url": "git+https://github.com/CasperDash/casper-storage.git"
   },
-  "license": "MIT",
+  "license": "Apache-2.0",
+  "licenses": [
+    {
+      "type": "Apache-2.0",
+      "url": "http://www.apache.org/licenses/LICENSE-2.0"
+    }
+  ],
   "keywords": [
     "casper",
     "storage",
