--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "jest": "^27.4.7",
     "jest-environment-jsdom": "^27.5.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.1.2",
+    "ts-jest": "27.1.4",
     "ts-node": "^10.4.0",
     "typedoc": "^0.22.12",
     "typescript": "^4.5.4"
