Fix relative paths, upgrade packages

--- a/package.json
+++ b/package.json
@@ -30,44 +30,42 @@
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
     "test": "jest --env=./test/test-env.js",
     "testci": "jest --env=./test/test-env.js --coverage",
-    "clean": "rimraf dist build package",
+    "clean": "rimraf dist build package coverage docs",
     "docs": "typedoc --entryPoints src/index.ts",
-    "build": "tsc -p tsconfig.build.json",
+    "build": "tsc -p tsconfig.build.json --downlevelIteration && tscpaths -p tsconfig.build.json -s ./src -o ./dist/tsc",
     "build-all": "yarn clean && yarn build && yarn esbuild-node && yarn esbuild-browser",
     "esbuild-browser": "esbuild src/browser.ts --bundle --minify --sourcemap=external --format=esm --outfile=dist/esbuild/browser.js",
     "esbuild-node": "esbuild src/cli.ts --bundle --platform=node --minify --sourcemap=external --outfile=dist/esbuild/cli.js",
     "esbuild": "esbuild src/cli.ts --bundle --outfile=dist/esbuild/cli.js",
-    "ts-node": "ts-node",
     "ensure": "yarn lint && yarn test",
     "deploy": "yarn build-all && npm publish",
     "helpme": "echo 'ensure, test, build-all'"
   },
   "dependencies": {
     "@noble/ed25519": "^1.4.0",
-    "@noble/hashes": "^0.5.9",
+    "@noble/hashes": "^1.0.0",
     "@noble/secp256k1": "^1.4.0",
-    "@react-native-async-storage/async-storage": "^1.16.1",
+    "@react-native-async-storage/async-storage": "^1.17.3",
     "@scure/base": "^1.0.0",
     "aes-js": "^3.1.2",
-    "key-encoder": "^2.0.3",
-    "micro-base": "^0.10.2"
+    "key-encoder": "^2.0.3"
   },
   "devDependencies": {
     "@types/aes-js": "^3.1.1",
     "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.9.0",
-    "@typescript-eslint/parser": "^5.9.0",
+    "@types/node": "^17.0.23",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "buffer": "^6.0.3",
-    "esbuild": "^0.14.10",
-    "eslint": "^8.6.0",
+    "esbuild": "^0.14.30",
+    "eslint": "^8.12.0",
     "jest": "^27.4.7",
     "jest-environment-jsdom": "^27.5.1",
     "rimraf": "^3.0.2",
     "ts-jest": "27.1.4",
-    "ts-node": "^10.4.0",
-    "typedoc": "^0.22.12",
-    "typescript": "^4.5.4"
+    "tscpaths": "^0.0.9",
+    "typedoc": "^0.22.13",
+    "typescript": "^4.6.3"
   },
   "homepage": "https://github.com/CasperDash/casper-storage#readme",
   "directories": {
