--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,15 +4,16 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "declaration": true,
-    "noUnusedLocals": true /* Report errors on unused locals. */,
-    "noUnusedParameters": true /* Report errors on unused parameters. */,
-    "noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement. */,
-    "importHelpers": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "importHelpers": false,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "experimentalDecorators": true,
     "isolatedModules": true,
+    "resolveJsonModule": true,
     "types": [
       "node",
       "jest"
@@ -21,6 +22,7 @@
       "ES6",
       "DOM"
     ],
+    "baseUrl": ".",
     "paths": {
       "@/*": [
         "./src/*"
