--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@noble/secp256k1": "^1.4.0",
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@scure/base": "^1.0.0",
+    "@scure/bip39": "^1.0.0",
     "aes-js": "^3.1.2",
     "key-encoder": "^2.0.3"
   },
