--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "testci": "jest --env=./test/test-env.js --coverage",
     "clean": "rimraf dist build package coverage docs",
     "docs": "typedoc --entryPoints src/index.ts",
-    "build": "tsc -p tsconfig.build.json --downlevelIteration && tscpaths -p tsconfig.build.json -s ./src -o ./dist/tsc",
+    "build": "tsc -p tsconfig.build.json --downlevelIteration",
     "build-all": "yarn clean && yarn build && yarn esbuild-node && yarn esbuild-browser",
     "esbuild-browser": "esbuild src/browser.ts --bundle --minify --sourcemap=external --format=esm --outfile=dist/esbuild/browser.js",
     "esbuild-node": "esbuild src/cli.ts --bundle --platform=node --minify --sourcemap=external --outfile=dist/esbuild/cli.js",
@@ -64,7 +64,6 @@
     "jest-environment-jsdom": "^27.5.1",
     "rimraf": "^3.0.2",
     "ts-jest": "27.1.4",
-    "tscpaths": "^0.0.9",
     "typedoc": "^0.22.13",
     "typescript": "^4.6.3"
   },
