--- a/package.json
+++ b/package.json
@@ -24,19 +24,17 @@
   },
   "browser": "./dist/esbuild/browser.js",
   "main": "./dist/tsc/cli.js",
+  "react-native": "./dist/tsc/cli.js",
   "types": "./dist/tsc/cli.d.ts",
   "scripts": {
     "prepublishOnly": "yarn build-all",
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
-    "test": "jest --env=./test/test-env.js",
-    "testci": "jest --env=./test/test-env.js --coverage",
+    "test": "jest",
+    "testci": "jest --coverage",
     "clean": "rimraf dist build package coverage docs",
     "docs": "typedoc --entryPoints src/index.ts",
     "build": "tsc -p tsconfig.build.json --downlevelIteration",
-    "build-all": "yarn clean && yarn build && yarn esbuild-node && yarn esbuild-browser",
-    "esbuild-browser": "esbuild src/browser.ts --bundle --minify --sourcemap=external --format=esm --outfile=dist/esbuild/browser.js",
-    "esbuild-node": "esbuild src/cli.ts --bundle --platform=node --minify --sourcemap=external --outfile=dist/esbuild/cli.js",
-    "esbuild": "esbuild src/cli.ts --bundle --outfile=dist/esbuild/cli.js",
+    "build-all": "yarn clean && yarn build",
     "ensure": "yarn lint && yarn test",
     "deploy": "yarn build-all && npm publish",
     "helpme": "echo 'ensure, test, build-all'"
@@ -47,8 +45,10 @@
     "@noble/secp256k1": "^1.6.3",
     "@scure/base": "^1.1.1",
     "@scure/bip39": "^1.1.0",
-    "aes-js": "^3.1.2",
-    "key-encoder": "^2.0.3"
+    "react-native": "^0.70.0",
+    "react-native-aes-crypto": "^2.1.0",
+    "react-native-key-encoder": "^1.1.6",
+    "react-native-randombytes": "^3.6.1"
   },
   "devDependencies": {
     "@types/aes-js": "^3.1.1",
@@ -56,11 +56,9 @@
     "@types/node": "^18.7.16",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
-    "buffer": "^6.0.3",
     "esbuild": "^0.15.7",
-    "eslint": "^8.23.0",
+    "eslint": "^8.23.1",
     "jest": "^29.0.3",
-    "jest-environment-jsdom": "^29.0.3",
     "rimraf": "^3.0.2",
     "ts-jest": "29.0.0",
     "typedoc": "^0.23.14",
