update release config

--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -1,11 +1,9 @@
 name: ci-release
 
 on:
-  workflow_run:
-    workflows: ["ci-check"]
-    branches: [release]
-    types:
-      - completed
+  push:
+    branches:
+      - release
 
 jobs:
   deploy:
