--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "bugs": {
     "url": "https://github.com/CasperDash/casper-storage/issues"
   },
-  "browser": "./dist/esbuild/browser.js",
+  "browser": "./dist/tsc/cli.js",
   "main": "./dist/tsc/cli.js",
   "types": "./dist/tsc/cli.d.ts",
   "scripts": {
@@ -33,10 +33,8 @@
     "clean": "rimraf dist build package coverage docs",
     "docs": "typedoc --entryPoints src/index.ts",
     "build": "tsc -p tsconfig.build.json --downlevelIteration",
-    "build-all": "yarn clean && yarn build && yarn esbuild-node && yarn esbuild-browser",
-    "esbuild-browser": "esbuild src/browser.ts --bundle --minify --sourcemap=external --format=esm --outfile=dist/esbuild/browser.js",
-    "esbuild-node": "esbuild src/cli.ts --bundle --platform=node --minify --sourcemap=external --outfile=dist/esbuild/cli.js",
-    "esbuild": "esbuild src/cli.ts --bundle --outfile=dist/esbuild/cli.js",
+    "build-all": "yarn clean && yarn build && yarn esbuild-browser",
+    "esbuild-browser": "esbuild src/browser.ts --bundle --minify --sourcemap=external --format=esm --outfile=dist/browser/index.js",
     "ensure": "yarn lint && yarn test",
     "deploy": "yarn build-all && npm publish",
     "helpme": "echo 'ensure, test, build-all'"
