--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   "scripts": {
     "prepublishOnly": "yarn build-all",
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
-    "test": "jest --env=./test/test-env.js",
+    "test": "yarn test:web",
+    "test:web": "jest --env=./test/test-web-env.js",
+    "test:node": "jest --env=node",
     "testci": "jest --env=./test/test-env.js --coverage",
     "clean": "rimraf dist build package coverage docs",
     "docs": "typedoc --entryPoints src/index.ts",
@@ -49,6 +51,7 @@
     "key-encoder": "^2.0.3"
   },
   "devDependencies": {
+    "@peculiar/webcrypto": "^1.4.0",
     "@types/aes-js": "^3.1.1",
     "@types/jest": "^29.0.0",
     "@types/node": "^18.7.16",
