--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@noble/secp256k1": "^1.6.3",
     "@scure/base": "^1.1.1",
     "@scure/bip39": "^1.1.0",
-    "key-encoder": "^2.0.3"
+    "asn1.js": "^5.4.1"
   },
   "devDependencies": {
     "@types/jest": "^29.0.0",
