--- a/package.json
+++ b/package.json
@@ -22,21 +22,21 @@
   "bugs": {
     "url": "https://github.com/CasperDash/casper-storage/issues"
   },
-  "browser": "./dist/esbuild/browser.js",
+  "browser": "./dist/tsc/cli.js",
   "main": "./dist/tsc/cli.js",
   "types": "./dist/tsc/cli.d.ts",
   "scripts": {
     "prepublishOnly": "yarn build-all",
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
-    "test": "jest --env=./test/test-env.js",
+    "test": "yarn test:web",
+    "test:web": "jest --env=./test/test-web-env.js",
+    "test:node": "jest --env=node",
     "testci": "jest --env=./test/test-env.js --coverage",
     "clean": "rimraf dist build package coverage docs",
     "docs": "typedoc --entryPoints src/index.ts",
     "build": "tsc -p tsconfig.build.json --downlevelIteration",
-    "build-all": "yarn clean && yarn build && yarn esbuild-node && yarn esbuild-browser",
-    "esbuild-browser": "esbuild src/browser.ts --bundle --minify --sourcemap=external --format=esm --outfile=dist/esbuild/browser.js",
-    "esbuild-node": "esbuild src/cli.ts --bundle --platform=node --minify --sourcemap=external --outfile=dist/esbuild/cli.js",
-    "esbuild": "esbuild src/cli.ts --bundle --outfile=dist/esbuild/cli.js",
+    "build-all": "yarn clean && yarn build && yarn esbuild-browser",
+    "esbuild-browser": "esbuild src/browser.ts --bundle --minify --sourcemap=external --format=esm --outfile=dist/browser/index.js",
     "ensure": "yarn lint && yarn test",
     "deploy": "yarn build-all && npm publish",
     "helpme": "echo 'ensure, test, build-all'"
@@ -47,11 +47,9 @@
     "@noble/secp256k1": "^1.6.3",
     "@scure/base": "^1.1.1",
     "@scure/bip39": "^1.1.0",
-    "aes-js": "^3.1.2",
     "key-encoder": "^2.0.3"
   },
   "devDependencies": {
-    "@types/aes-js": "^3.1.1",
     "@types/jest": "^29.0.0",
     "@types/node": "^18.7.16",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
