--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "clean": "rimraf dist build package coverage docs",
     "docs": "typedoc --entryPoints src/index.ts",
     "build": "tsc -p tsconfig.build.json --downlevelIteration",
-    "build-all": "yarn clean && yarn build && yarn esbuild-browser",
-    "esbuild-browser": "esbuild src/browser.ts --bundle --minify --sourcemap=external --format=esm --outfile=dist/browser/index.js",
+    "build-all": "yarn clean && yarn build",
     "ensure": "yarn lint && yarn test",
     "deploy": "yarn build-all && npm publish",
     "helpme": "echo 'ensure, test, build-all'"
