--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "casper-storage",
-  "version": "1.0.0-alpha.1",
+  "version": "1.0.0",
   "description": "Provides standard implementation of wallet workflow, following standards BIPs, SLIPs",
   "author": "Caperdash.io <hello@casperdash.io>",
   "repository": {
