--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "casper-storage",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Provides standard implementation of wallet workflow, following standards BIPs, SLIPs",
   "author": "Caperdash.io <hello@casperdash.io>",
   "repository": {
@@ -42,27 +42,26 @@
     "helpme": "echo 'ensure, test, build-all'"
   },
   "dependencies": {
-    "@noble/ed25519": "^1.7.0",
-    "@noble/hashes": "^1.1.2",
-    "@noble/secp256k1": "^1.6.3",
+    "@noble/curves": "^0.9.0",
+    "@noble/hashes": "^1.3.0",
     "@scure/base": "^1.1.1",
-    "@scure/bip39": "^1.1.0",
+    "@scure/bip39": "^1.2.0",
     "key-encoder": "^2.0.3"
   },
   "devDependencies": {
-    "@types/jest": "^29.0.0",
-    "@types/node": "^18.7.16",
-    "@typescript-eslint/eslint-plugin": "^5.36.2",
-    "@typescript-eslint/parser": "^5.36.2",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.9",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
     "buffer": "^6.0.3",
-    "esbuild": "^0.15.7",
-    "eslint": "^8.23.0",
-    "jest": "^29.0.3",
-    "jest-environment-jsdom": "^29.0.3",
-    "rimraf": "^3.0.2",
-    "ts-jest": "29.0.0",
-    "typedoc": "^0.23.14",
-    "typescript": "^4.8.3"
+    "esbuild": "^0.17.13",
+    "eslint": "^8.36.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "rimraf": "^4.4.1",
+    "ts-jest": "29.0.5",
+    "typedoc": "^0.23.28",
+    "typescript": "^5.0.2"
   },
   "homepage": "https://github.com/CasperDash/casper-storage#readme",
   "directories": {
